<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_background"
    tools:context=".SecondTask">

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/show_time"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_textView"
        tools:layout_editor_absoluteY="95dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginVertical="50dp"
        android:elevation="20dp"
        android:src="@drawable/qrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_textView" />


    <LinearLayout
        android:id="@+id/btns_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:elevation="0dp"
            app:cardCornerRadius="21dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/camera_flip_icon"
                android:padding="10dp"
                android:src="@drawable/ic_outline_flip_camera_ios_24"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/text_bg_blue"
            android:gravity="center"
            android:text="@string/use_pin_code"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:shadowColor="@color/blue_text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="0dp"
            app:cardCornerRadius="21dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fullscreen_icon"
                android:padding="10dp"
                android:src="@drawable/ic_screen_full" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btns_container">

        <TextView
            style="@style/app_text"
            android:textColor="@color/blue_text"
            android:text="@string/look"
            app:drawableTopCompat="@drawable/ic_twotone_camera_alt_24" />

        <TextView
            style="@style/app_text"
            android:textColor="@color/blue_text"
            android:text="@string/employee"
            app:drawableTopCompat="@drawable/ic_twotone_person_24" />

        <TextView
            style="@style/app_text"
            android:textColor="@color/blue_text"
            android:text="@string/reports"
            app:drawableTopCompat="@drawable/ic_twotone_assignment_24" />

        <TextView
            style="@style/app_text"
            android:textColor="@color/blue_text"
            android:text="@string/admin"
            app:drawableTopCompat="@drawable/ic_twotone_settings_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>