<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textColor="@color/purple_600"
            android:textStyle="bold"
            android:padding="10dp"
            android:hint="@string/_18_march_2018"
            app:drawableLeftCompat="@drawable/round_bullet"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/twitter_feeds_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="2"
            android:minLines="1"
            android:padding="10dp"
            android:hint="@string/lorem_ipsum" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/horizontal_border_line"
            android:contentDescription="@string/border_line"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>