<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingVertical="30dp"
        android:paddingHorizontal="10dp"
        android:background="@android:color/holo_blue_bright">

        <LinearLayout
            android:id="@+id/days_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="02"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/days"/>

        </LinearLayout>

        <ImageView
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:src="@drawable/border_line"
            android:contentDescription="@string/border_line" />

        <LinearLayout
            android:id="@+id/hours_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="14"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/hours"/>

        </LinearLayout>

        <ImageView
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:src="@drawable/border_line"
            android:contentDescription="@string/border_line" />

        <LinearLayout
            android:id="@+id/minutes_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginStart="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/minutes"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>